C2E store basic admin, listing data model and endpoint :sparkles:
